--- a/zh_CN.properties
+++ b/zh_CN.properties
@@ -20,7 +20,7 @@ AppEng.Gui.Interface=ME接口
 AppEng.Gui.IOPort=ME IO端口
 AppEng.Gui.LevelEmitter=ME信号发射器
 AppEng.Gui.MAC=ME分子装配室
-AppEng.Gui.MissingMaterials=缺少材料
+AppEng.Gui.MissingMaterials=缺少的材料
 AppEng.Gui.Name=名称： 
 AppEng.Gui.P2PTunnel=ME P2P通道
 AppEng.Gui.PatternEncoder=ME样板编码器
@@ -41,6 +41,10 @@ AppEng.Gui.Rate=Units / t
 AppEng.Gui.Conflict=控制器冲突
 AppEng.GuiButtons.Next=下一页
 AppEng.GuiButtons.Prev=上一页
+AppEng.GuiITooltip.Linked=已连接
+AppEng.GuiITooltip.Unlinked=未连接
+AppEng.GuiITooltip.Preconfigured=预配置
+AppEng.GuiITooltip.Energy=能量
 Appeng.GuiITooltip.Partitioned=匹配模式
 Appeng.GuiITooltip.Fuzzy=模糊
 Appeng.GuiITooltip.Precise=精确
@@ -87,7 +91,7 @@ AppEng.GuiITooltip.PriorityCellOrder=优先级 / 单元顺序
 AppEng.GuiITooltip.RedstoneMode=红石控制
 AppEng.GuiITooltip.SortBy=排序方式
 AppEng.GuiITooltip.SortOrder=排序方向
-AppEng.GuiITooltip.StackMode=存储模式
+AppEng.GuiITooltip.StackMode=传输模式
 AppEng.GuiITooltip.StoredCraftable=存储的物品 / 合成的物品
 AppEng.GuiITooltip.StoredItems=存储的物品
 AppEng.GuiITooltip.ToggleSortDirection=切换排序方向
@@ -99,6 +103,12 @@ AppEng.GuiITooltip.ItemID=物品ID
 AppEng.GuiTooltips.CreativeTab=应用能源
 AppEng.GuiTooltips.ItemsRequestable=可请求的物品：
 AppEng.GuiTooltips.ItemsStored=存储的物品：
+AppEng.GuiITooltip.FuzzyMode=损耗对比
+AppEng.GuiITooltip.FuzzyMode.Percent_25=Split at 25%
+AppEng.GuiITooltip.FuzzyMode.Percent_50=Split at 50%
+AppEng.GuiITooltip.FuzzyMode.Percent_75=Split at 75%
+AppEng.GuiITooltip.FuzzyMode.Percent_99=Split at 99%
+AppEng.GuiITooltip.FuzzyMode.IgnoreAll=忽略损耗
 AppEng.Items.1k.name=ME 1k存储器
 AppEng.Items.4k.name=ME 4k存储器
 AppEng.Items.16k.name=ME 16k存储器
@@ -131,7 +141,7 @@ AppEng.Materials.StorageSegment.name=存储片段
 AppEng.Materials.WirelessBooster.name=无线延长器
 AppEng.Materials.WirelessReceiver.name=无线接收器
 AppEng.Materials.WoodenCrank.name=木制曲柄
-AppEng.Materials.WoodenGear.name=木制齿轮
+AppEng.Materials.WoodenGear.name=木齿轮
 AppEng.Materials.IronNugget.name=铁粒
 AppEng.Materials.MatterBall.name=物质球
 AppEng.Materials.Singularity.name=奇异球
@@ -175,7 +185,7 @@ AppEng.Blocks.ExportBusPrecision.name=ME精确输出总线
 AppEng.Blocks.P2PTunnel.name=ME P2P通道
 AppEng.Blocks.PatternEncoder.name=ME样板编辑器
 AppEng.Blocks.Partitioner.name=ME分区编辑器
-AppEng.Blocks.StorageBus.name=ME存储总线
+AppEng.Blocks.StorageBus.name=ME精确存储总线
 AppEng.Blocks.StorageBusFuzzy.name=ME模糊存储总线
 AppEng.Blocks.StorageMonitor.name=ME存储监控器
 AppEng.Blocks.Terminal.name=ME接入终端
@@ -203,3 +213,4 @@ ChatMsg.TermNoPower=无线接入终端 - 没有能量
 ChatMsg.TermNoSignal=无线接入终端 - 没有信号
 ChatMsg.AmmoDepleted=弹药已使用完
 death.attack.masscannon=%1$s 在物质炮错误的一端
+itemGroup.Applied Energistics=应用能源标签
