add ME Quantum Blocks (for rv12-dev1
there is a bug with AppEng.GuiITooltip.Linked/Unlinked.
It won't change the tooltip ingame if I edit the file.

Looking forward for more quantum awesomeness in this mod. ;)

--- a/de_DE.properties
+++ b/de_DE.properties
@@ -31,6 +31,7 @@ AppEng.Gui.Processing=Externe Fertigung
 AppEng.Gui.StorageBus=ME Speicherbus
 AppEng.Gui.SubJob=Umschalt+klicke den Gegenstand,\n um die Fertigung abzubrechen.
 AppEng.Gui.Terminal=ME Konsole
+AppEng.Gui.QuantumLink=ME Quanten-Tunnelkammer
 AppEng.Gui.WirelessAccessPoint=ME drahloser Zugangspunkt
 AppEng.Gui.PowerRelay=ME Energierelais
 AppEng.Gui.Online=Online
@@ -145,6 +146,8 @@ AppEng.Materials.WoodenGear.name=Holzzahnrad
 AppEng.Materials.IronNugget.name=Eisennugget
 AppEng.Materials.MatterBall.name=Materieball
 AppEng.Materials.Singularity.name=Singularit\u00E4t
+AppEng.Materials.EnderPearlDust.name=Endeperlen-Staub
+AppEng.Materials.QuantumEntangledSingularity.name=Quantenverschr\u00E4nkte Singularit\u00E4t
 AppEng.Sizes.1000=K
 AppEng.Sizes.1000000=M
 AppEng.Sizes.1000000000=B
@@ -196,6 +199,8 @@ AppEng.Blocks.Quartz.name=Certus-Quarzblock
 AppEng.Blocks.EnergyCell.name=Energiezelle
 AppEng.Blocks.Condenser.name=ME Kondensator
 AppEng.Blocks.PowerRelay.name=ME Energierelais
+AppEng.Blocks.QuantumLink.name=Quanten-Tunnelkammer
+AppEng.Blocks.QuantumRing.name=Quanten-Tunnelring
 AppEng.Colors.Blue=Blau
 AppEng.Colors.Black=Schwarz
 AppEng.Colors.White=Weiss
