--- a/de_DE.properties
+++ b/de_DE.properties
@@ -201,6 +201,7 @@ AppEng.Blocks.Condenser.name=ME Kondensator
 AppEng.Blocks.PowerRelay.name=ME Energierelais
 AppEng.Blocks.QuantumLink.name=Quanten-Tunnelkammer
 AppEng.Blocks.QuantumRing.name=Quanten-Tunnelring
+AppEng.Blocks.QuartzGlass.name=Quarzglas
 AppEng.Colors.Blue=Blau
 AppEng.Colors.Black=Schwarz
 AppEng.Colors.White=Weiss
