--- a/de_DE.properties
+++ b/de_DE.properties
@@ -42,6 +42,10 @@ AppEng.Gui.Rate=Einheiten / t
 AppEng.Gui.Conflict=Kernkonflikt
 AppEng.GuiButtons.Next=Vor
 AppEng.GuiButtons.Prev=Zur\u00FCck
+AppEng.GuiITooltip.IOMode=Input/Output Modus
+AppEng.GuiITooltip.Read=Date nur lesen
+AppEng.GuiITooltip.Write=Daten nur schreiben
+AppEng.GuiITooltip.ReadWrite=Daten lesen und schreiben
 AppEng.GuiITooltip.Linked=Synchronisiert
 AppEng.GuiITooltip.Unlinked=Nicht synchronisiert
 AppEng.GuiITooltip.Preconfigured=Einstellungen beibehalten
