--- a/de_DE.properties
+++ b/de_DE.properties
@@ -206,7 +206,7 @@ AppEng.Blocks.PowerRelay.name=ME Energierelais
 AppEng.Blocks.QuantumLink.name=Quanten-Tunnelkammer
 AppEng.Blocks.QuantumRing.name=Quanten-Tunnelring
 AppEng.Blocks.QuartzGlass.name=Quarzglas
-AppEng.Blocks.PocketTNT.name=Mini-TNT
+AppEng.Blocks.TinyTNT.name=Mini-TNT
 AppEng.Colors.Blue=Blau
 AppEng.Colors.Black=Schwarz
 AppEng.Colors.White=Weiss
