Adjusted some words of zh_CN.properties to better.

--- a/zh_CN.properties
+++ b/zh_CN.properties
@@ -1,3 +1,5 @@
+#zh_CN
+
 AppEng.Gui.Begin=开始
 AppEng.Gui.Cancel=取消
 AppEng.Gui.Chest=ME箱子
@@ -11,7 +13,7 @@ AppEng.Gui.CurrentlyCrafting=当前合成
 AppEng.Gui.Drive=ME驱动器
 AppEng.Gui.Encode=编码
 AppEng.Gui.ExportConfig=输出配置
-AppEng.Gui.ExportedItems=输出的物品
+AppEng.Gui.ExportedItems=输出物品
 AppEng.Gui.ExpotBus==ME输出总线
 AppEng.Gui.Format=格式化
 AppEng.Gui.Condenser=ME压缩机
@@ -20,7 +22,7 @@ AppEng.Gui.Interface=ME接口
 AppEng.Gui.IOPort=ME IO端口
 AppEng.Gui.LevelEmitter=ME信号发射器
 AppEng.Gui.MAC=ME分子装配室
-AppEng.Gui.MissingMaterials=缺少的材料
+AppEng.Gui.MissingMaterials=缺少材料
 AppEng.Gui.Name=名称： 
 AppEng.Gui.P2PTunnel=ME P2P通道
 AppEng.Gui.PatternEncoder=ME样板编码器
@@ -29,7 +31,7 @@ AppEng.Gui.Partitioner=ME分区编辑器
 AppEng.Gui.Priority=ME存储优先级
 AppEng.Gui.Processing=自动化处理
 AppEng.Gui.StorageBus=ME存储总线
-AppEng.Gui.SubJob=要取消作业或下属作业，\n按住 shift 左键单击物品
+AppEng.Gui.SubJob=要取消作业或下属作业，\n按住shift左键单击物品
 AppEng.Gui.Terminal=ME终端
 AppEng.Gui.WirelessAccessPoint=ME无线接入点
 AppEng.Gui.PowerRelay=ME能源继电器
@@ -37,7 +39,7 @@ AppEng.Gui.Online=已开启
 AppEng.Gui.Offline=未开启
 AppEng.Gui.LowPower=能量低
 AppEng.Gui.EnergyUsed=能量使用
-AppEng.Gui.Rate=Units / t
+AppEng.Gui.Rate=Units/t
 AppEng.Gui.Conflict=控制器冲突
 AppEng.GuiButtons.Next=下一页
 AppEng.GuiButtons.Prev=上一页
@@ -87,12 +89,12 @@ AppEng.GuiITooltip.MoveWhenFull=当存储单元满载时输出到右侧
 AppEng.GuiITooltip.MoveWhenWorkIsDone=当工作完成后存储单元输出到右侧
 AppEng.GuiITooltip.NumberOfItems=物品数量
 AppEng.GuiITooltip.OperationMode=操作模式
-AppEng.GuiITooltip.PriorityCellOrder=优先级 / 单元顺序
+AppEng.GuiITooltip.PriorityCellOrder=优先级/单元顺序
 AppEng.GuiITooltip.RedstoneMode=红石控制
 AppEng.GuiITooltip.SortBy=排序方式
 AppEng.GuiITooltip.SortOrder=排序方向
 AppEng.GuiITooltip.StackMode=传输模式
-AppEng.GuiITooltip.StoredCraftable=存储的物品 / 合成的物品
+AppEng.GuiITooltip.StoredCraftable=存储的物品/合成的物品
 AppEng.GuiITooltip.StoredItems=存储的物品
 AppEng.GuiITooltip.ToggleSortDirection=切换排序方向
 AppEng.GuiITooltip.TransferDirection=传送方向
@@ -104,10 +106,10 @@ AppEng.GuiTooltips.CreativeTab=应用能源
 AppEng.GuiTooltips.ItemsRequestable=可请求的物品：
 AppEng.GuiTooltips.ItemsStored=存储的物品：
 AppEng.GuiITooltip.FuzzyMode=损耗对比
-AppEng.GuiITooltip.FuzzyMode.Percent_25=Split at 25%
-AppEng.GuiITooltip.FuzzyMode.Percent_50=Split at 50%
-AppEng.GuiITooltip.FuzzyMode.Percent_75=Split at 75%
-AppEng.GuiITooltip.FuzzyMode.Percent_99=Split at 99%
+AppEng.GuiITooltip.FuzzyMode.Percent_25=25%时分离
+AppEng.GuiITooltip.FuzzyMode.Percent_50=50%时分离
+AppEng.GuiITooltip.FuzzyMode.Percent_75=75%时分离
+AppEng.GuiITooltip.FuzzyMode.Percent_99=99%时分离
 AppEng.GuiITooltip.FuzzyMode.IgnoreAll=忽略损耗
 AppEng.Items.1k.name=ME 1k存储器
 AppEng.Items.4k.name=ME 4k存储器
@@ -125,19 +127,19 @@ AppEng.Materials.IronDust.name=铁粉
 AppEng.Materials.MEAdvancedProcessor.name=ME高级处理器
 AppEng.Materials.MEBasicProcessor.name=ME基础处理器
 AppEng.Materials.MEBlankPattern.name=ME空白样板
-AppEng.Materials.QuartzCrystal.name=赛特斯石英
+AppEng.Materials.QuartzCrystal.name=瑟特斯石英
 AppEng.Materials.QuartzDustNether.name=下界石英粉
-AppEng.Materials.QuartzDust.name=赛特斯石英粉
-AppEng.Materials.FluxQuartz.name=弗鲁伊克斯水晶
-AppEng.Materials.FluxPearl.name=弗鲁伊克斯珍珠
+AppEng.Materials.QuartzDust.name=瑟特斯石英粉
+AppEng.Materials.FluxQuartz.name=福鲁艾肯斯水晶
+AppEng.Materials.FluxPearl.name=福鲁艾肯斯珍珠
 AppEng.Materials.PotentiaQuartz.name=能量水晶
-AppEng.Materials.FluxQuartzDust.name=弗鲁伊克斯粉
+AppEng.Materials.FluxQuartzDust.name=福鲁艾肯斯粉
 AppEng.Materials.Silicon.name=硅
 AppEng.Materials.StorageBlock.name=存储块
 AppEng.Materials.StorageCell.name=存储元
 AppEng.Materials.StorageCellHousing.name=存储单元室
-AppEng.Materials.StorageCluster.name=存储集群
-AppEng.Materials.StorageSegment.name=存储片段
+AppEng.Materials.StorageCluster.name=存储簇
+AppEng.Materials.StorageSegment.name=存储段
 AppEng.Materials.WirelessBooster.name=无线延长器
 AppEng.Materials.WirelessReceiver.name=无线接收器
 AppEng.Materials.WoodenCrank.name=木制曲柄
@@ -160,7 +162,7 @@ AppEng.Tools.QuartzWrench.name=石英扳手
 AppEng.Tools.VibrationCatalyst.name=振动催化剂
 AppEng.Tools.EntropyAccelerator.name=熵加速器
 AppEng.Tools.MassCannon.name=物质炮
-AppEng.Blocks.OreQuartz.name=赛特斯石英矿石
+AppEng.Blocks.OreQuartz.name=瑟特斯石英矿石
 AppEng.Blocks.PatternProvider.name=ME样板提供器
 AppEng.Blocks.AssemblerContainmentWall.name=ME装配室外墙
 AppEng.Blocks.Chest.name=ME箱子
@@ -192,7 +194,7 @@ AppEng.Blocks.Terminal.name=ME接入终端
 AppEng.Blocks.WirelessAccessPoint.name=ME无线接入点
 AppEng.Blocks.GrindStone.name=研磨石
 AppEng.Blocks.TransitionPlane.name=ME转换刨工机
-AppEng.Blocks.Quartz.name=赛特斯石英块
+AppEng.Blocks.Quartz.name=瑟特斯石英方块
 AppEng.Blocks.EnergyCell.name=能量单元
 AppEng.Blocks.Condenser.name=ME压缩机
 AppEng.Blocks.PowerRelay.name=ME能源继电器
@@ -208,9 +210,9 @@ ChatMsg.NoPowerSM=存储监控器没有能量
 ChatMsg.NoController=无法连接到ME控制器
 ChatMsg.Locked=存储监控器已上锁
 ChatMsg.Unlocked=存储监控器已解锁
-ChatMsg.TermNotLinked=无线接入终端 - 未连接
-ChatMsg.TermNoPower=无线接入终端 - 没有能量
-ChatMsg.TermNoSignal=无线接入终端 - 没有信号
+ChatMsg.TermNotLinked=无线接入终端-未连接
+ChatMsg.TermNoPower=无线接入终端-没有能量
+ChatMsg.TermNoSignal=无线接入终端-没有信号
 ChatMsg.AmmoDepleted=弹药已使用完
-death.attack.masscannon=%1$s 在物质炮错误的一端
-itemGroup.Applied Energistics=应用能源标签
+death.attack.masscannon=%1$s 后悔错误地出现在了物质炮炮口的对面。
+itemGroup.Applied Energistics=应用动力
