Completely reworked russian localization
still incomplete...

--- a/ru_RU.properties
+++ b/ru_RU.properties
@@ -1,41 +1,71 @@
 AppEng.Gui.Begin=Начать
-AppEng.Gui.Chest=МE Сундук
+AppEng.Gui.Cancel=Отменить
+AppEng.Gui.Chest=МЭ сундук
 AppEng.Gui.Clear=Очистить
-AppEng.Gui.Controller=МE Контроллер
-AppEng.Gui.Crafting=МE Крафт
-AppEng.Gui.CraftingMonitor=МЭ Монитор крафта
-AppEng.Gui.CTerminal=МE С-Терминал
+AppEng.Gui.Controller=МЭ контроллер
+AppEng.Gui.Crafting=МЭ крафт
+AppEng.Gui.CraftingMonitor=МЭ монитор крафта
+AppEng.Gui.GrindStone=Ручная дробилка
+AppEng.Gui.CTerminal=МЭ С-терминал
 AppEng.Gui.CurrentlyCrafting=Сейчас создаётся
-AppEng.Gui.Drive=МE Привод
+AppEng.Gui.Drive=МЭ привод
 AppEng.Gui.Encode=Закодировать
-AppEng.Gui.ExportConfig=Экспортние настройки
-AppEng.Gui.ExportedItems=Экспортние предметы
-AppEng.Gui.ExpotBus=МE Шина экспорта
+AppEng.Gui.ExportConfig=Экспортные настройки
+AppEng.Gui.ExportedItems=Экспортные предметы
+AppEng.Gui.ExpotBus=МЭ шина экспорта
 AppEng.Gui.Format=Форматировать
-AppEng.Gui.ImportBus=МE Шина импорта
-AppEng.Gui.Interface=МE Интерфейс
-AppEng.Gui.IOPort=МE Порт ввода-вывода
-AppEng.Gui.LevelEmitter=МE Излучатель Уровня
-AppEng.Gui.MAC=МE Камера Молекулярного Синтеза
+AppEng.Gui.Condenser=МЭ конденсатор
+AppEng.Gui.ImportBus=МЭ шина импорта
+AppEng.Gui.Interface=МЭ интерфейс
+AppEng.Gui.IOPort=МЭ порт ввода-вывода
+AppEng.Gui.LevelEmitter=МЭ излучатель уровня
+AppEng.Gui.MAC=МЭ камера молекулярного синтеза
 AppEng.Gui.MissingMaterials=Отсутствующие материалы
 AppEng.Gui.Name=Имя: 
-AppEng.Gui.P2PTunnel=МE P2P Тунель
-AppEng.Gui.PatternEncoder=МE Кодировщик шаблонов
-AppEng.Gui.PatternProvider=МE Поставщик шаблонов
-AppEng.Gui.Preformatter=МE Редактор карт памяти
-AppEng.Gui.Priority=МE Приоритет хранения
-AppEng.Gui.Processing=Производство
-AppEng.Gui.StorageBus=МE Шина памяти
+AppEng.Gui.P2PTunnel=МЭ P2P тунель
+AppEng.Gui.PatternEncoder=МЭ кодировщик шаблонов
+AppEng.Gui.PatternProvider=МЭ поставщик шаблонов
+AppEng.Gui.Partitioner=МЭ редактор карт памяти 
+AppEng.Gui.Priority=МЭ приоритет хранения
+AppEng.Gui.Processing=производство
+AppEng.Gui.StorageBus=МЭ шина памяти
 AppEng.Gui.SubJob=Чтобы отменить задачу или подзадачу,\n зажмите левый shift и кликните по предмету.
-AppEng.Gui.Terminal=МE Терминал
-AppEng.Gui.WirelessAccessPoint=МE Точка беспроводного доступа
+AppEng.Gui.Terminal=МЭ терминал
+AppEng.Gui.WirelessAccessPoint=МЭ точка беспроводного доступа
+AppEng.Gui.PowerRelay=МЭ силовое реле
 AppEng.Gui.Online=Онлайн
 AppEng.Gui.Offline=Оффлайн
 AppEng.Gui.LowPower=Мало энергии
+AppEng.Gui.EnergyUsed=Энергии затрачено
 AppEng.Gui.Rate=Ед/т
 AppEng.Gui.Conflict=Конфликт контроллеров
 AppEng.GuiButtons.Next=След.
 AppEng.GuiButtons.Prev=Пред.
+AppEng.GuiITooltip.Linked=Linked
+AppEng.GuiITooltip.Unlinked=Unlinked
+AppEng.GuiITooltip.Preconfigured=Preconfigured
+AppEng.GuiITooltip.Energy=Энергия
+Appeng.GuiITooltip.Partitioned=Partitioned
+Appeng.GuiITooltip.Fuzzy=Fuzzy
+Appeng.GuiITooltip.Precise=Precise
+Appeng.GuiITooltip.Ammo=Боеприпасы
+Appeng.GuiITooltip.BytesUsed=Байтов использовано
+Appeng.GuiITooltip.Types=Типы
+Appeng.GuiITooltip.Of=of
+Appeng.GuiITooltip.NoAmmoAvailable=Боеприпасов нет
+Appeng.GuiITooltip.AccumulatedEnergy=Накопленная энергия
+AppEng.GuiITooltip.CondenserOutput=МЭ конденсатор  - выход
+AppEng.GuiITooltip.TrashController=Удаление с помощью нажатия Shift / Space.
+AppEng.GuiITooltip.Enable=Включено - нажмите для переключения.
+AppEng.GuiITooltip.Disabled=Отключено - нажмите для переключения.
+AppEng.GuiITooltip.Trash=Уничтожить предметы
+AppEng.GuiITooltip.MatterBalls=Condense Into Matter Balls\n%s per item
+AppEng.GuiITooltip.Singularity=Condense Into Singularities\n%s per item
+AppEng.GuiITooltip.PartitionStorage=Partition Storage
+AppEng.GuiITooltip.PartitionStorageHint=Configures Partition based on currently stored items.
+AppEng.GuiITooltip.Crafts=Crafts
+AppEng.GuiITooltip.With=With
+AppEng.GuiITooltip.and=and
 AppEng.GuiITooltip.MatchingMode=Режим сравнения
 AppEng.GuiITooltip.MatchingFuzzy=Интерактивный
 AppEng.GuiITooltip.MatchingExact=Точный
@@ -62,95 +92,110 @@ AppEng.GuiITooltip.RedstoneMode=Редстоун Режим
 AppEng.GuiITooltip.SortBy=Сортировать по
 AppEng.GuiITooltip.SortOrder=Порядок сортировки
 AppEng.GuiITooltip.StackMode=Режим пачки
-AppEng.GuiITooltip.StoredCraftable=Сохраненные / Создаваемые
+AppEng.GuiITooltip.StoredCraftable=Сохранённые / создаваемые
 AppEng.GuiITooltip.StoredItems=Сохранённые предметы
 AppEng.GuiITooltip.ToggleSortDirection=Переключить направление сортировки
 AppEng.GuiITooltip.TransferDirection=Направление перемещения
-AppEng.GuiITooltip.TransferToNetwork=Переместить данные в Сеть
+AppEng.GuiITooltip.TransferToNetwork=Переместить данные в сеть
 AppEng.GuiITooltip.TransferToStorageCell=Переместить данные в ячейку хранения
 AppEng.GuiITooltip.View=Просмотр
 AppEng.GuiITooltip.ItemID=ID предмета
 AppEng.GuiTooltips.CreativeTab=Applied Energistics
-AppEng.GuiTooltips.ItemsRequestable=Требуемые Предметы: 
-AppEng.GuiTooltips.ItemsStored=Сохранённые предметы: 
-AppEng.Items.1k.name=МЕ 1k Хранилище
-AppEng.Items.4k.name=МЕ 4k Хранилище
-AppEng.Items.16k.name=МЕ 16k Хранилище
-AppEng.Items.64k.name=МЕ 64k Хранилище
-AppEng.Items.BlankPattern.name=МЕ Шаблон крафта
-AppEng.Items.EncPattern.name=МЕ Кодированный шаблон
-AppEng.Items.WirelessTerminal.name=МЕ Беспроводная точка доступа
-AppEng.Materials.AdvancedProcessorAssembly.name=Незаконченный Улучшенный Процессор
-AppEng.Materials.BasicProcessorAssembly.name=Незаконченный Стандартный Процессор
+AppEng.GuiTooltips.ItemsRequestable=Требуемые Предметы:
+AppEng.GuiTooltips.ItemsStored=Сохранённые предметы:
+AppEng.GuiITooltip.FuzzyMode=Сравнение урона
+AppEng.GuiITooltip.FuzzyMode.Percent_25=Split at 25%
+AppEng.GuiITooltip.FuzzyMode.Percent_50=Split at 50%
+AppEng.GuiITooltip.FuzzyMode.Percent_75=Split at 75%
+AppEng.GuiITooltip.FuzzyMode.Percent_99=Split at 99%
+AppEng.GuiITooltip.FuzzyMode.IgnoreAll=Игнорировать урон
+AppEng.Items.1k.name=МЭ 1k хранилище
+AppEng.Items.4k.name=МЭ 4k хранилище
+AppEng.Items.16k.name=МЭ 16k хранилище
+AppEng.Items.64k.name=МЭ 64k хранилище
+AppEng.Items.BlankPattern.name=МЭ шаблон крафта
+AppEng.Items.EncPattern.name=МЭ кодированный шаблон
+AppEng.Items.WirelessTerminal.name=МЭ Беспроводная точка доступа
+AppEng.Materials.AdvancedProcessorAssembly.name=Незаконченный улучшенный процессор
+AppEng.Materials.BasicProcessorAssembly.name=Незаконченный стандартный процессор
 AppEng.Materials.ConversionMatrix.name=Конвертирующая матрица
 AppEng.Materials.Flour.name=Мука
-AppEng.Materials.GoldDust.name=Золотая Пыль
-AppEng.Materials.IronDust.name=Железная Пыль
-AppEng.Materials.MEAdvancedProcessor.name=МЕ Улучшенный Процессор
-AppEng.Materials.MEBasicProcessor.name=МЕ Стандартный Процессор
-AppEng.Materials.MEBlankPattern.name=МЕ Шаблон крафта
+AppEng.Materials.GoldDust.name=Золотая пыль
+AppEng.Materials.IronDust.name=Железная пыль
+AppEng.Materials.MEAdvancedProcessor.name=МЭ улучшенный процессор
+AppEng.Materials.MEBasicProcessor.name=МЭ стандартный процессор
+AppEng.Materials.MEBlankPattern.name=МЭ шаблон крафта
 AppEng.Materials.QuartzCrystal.name=Кристалл кварца
 AppEng.Materials.QuartzDustNether.name=Адская кварцеввая пыль
-AppEng.Materials.QuartzDust.name=Кварцеввая пыль
-AppEng.Materials.FluxQuartz.name=Кристалл Аметиста
-AppEng.Materials.FluxPearl.name=Аметистовый жемчуг
-AppEng.Materials.PotentiaQuartz.name=Potentia Кристалл
+AppEng.Materials.QuartzDust.name=Кварцевая пыль
+AppEng.Materials.FluxQuartz.name=Аметистовый кристалл
+AppEng.Materials.FluxPearl.name=Аметистовая жемчужина
+AppEng.Materials.PotentiaQuartz.name=Potentia кристалл
 AppEng.Materials.FluxQuartzDust.name=Аметистовая пыль
 AppEng.Materials.Silicon.name=Кремний
 AppEng.Materials.StorageBlock.name=Блок памяти
 AppEng.Materials.StorageCell.name=Ячейка памяти
-AppEng.Materials.StorageCellHousing.name=Корпус для Ячеек памяти
+AppEng.Materials.StorageCellHousing.name=Корпус для ячеек памяти
 AppEng.Materials.StorageCluster.name=Кластер памяти
 AppEng.Materials.StorageSegment.name=Сегмент памяти
 AppEng.Materials.WirelessBooster.name=Усилитель сигнала
 AppEng.Materials.WirelessReceiver.name=Беспроводной приёмник
-AppEng.Materials.WoodenCrank.name=Деревянный Рычаг
-AppEng.Materials.WoodenGear.name=Деревянная Шестерня
+AppEng.Materials.WoodenCrank.name=Деревянный рычаг
+AppEng.Materials.WoodenGear.name=Деревянная шестерня
+AppEng.Materials.IronNugget.name=Железный самородок
+AppEng.Materials.MatterBall.name=Шарик материи
+AppEng.Materials.Singularity.name=Сингулярность
 AppEng.Sizes.1000=K
 AppEng.Sizes.1000000=M
 AppEng.Sizes.1000000000=B
 AppEng.Terminal.Craft=Создание
 AppEng.Terminal.LP=LP
-AppEng.Tools.QuartzAxe.name=Кварцевый Топор
+AppEng.Tools.QuartzAxe.name=Кварцевый топор
 AppEng.Tools.QuartzCuttingKnife.name=Кварцевый резец
-AppEng.Tools.QuartzHoe.name=Кварцевая Мотыга
-AppEng.Tools.QuartzPickAxe.name=Кварцевая Кирка
-AppEng.Tools.QuartzShovel.name=Кварцевая Лопата
-AppEng.Tools.QuartzSword.name=Кварцевый Меч
-AppEng.Tools.QuartzWrench.name=Кварцевый Гаечный ключ
+AppEng.Tools.QuartzHoe.name=Кварцевая мотыга
+AppEng.Tools.QuartzPickAxe.name=Кварцевая кирка
+AppEng.Tools.QuartzShovel.name=Кварцевая лопата
+AppEng.Tools.QuartzSword.name=Кварцевый меч
+AppEng.Tools.QuartzWrench.name=Кварцевый ключ
 AppEng.Tools.VibrationCatalyst.name=Катализатор вибрации
 AppEng.Tools.EntropyAccelerator.name=Ускоритель энтропии
-AppEng.Blocks.OreQuartz.name=Надёжная кварцевая руда
-AppEng.Blocks.PatternProvider.name=МЕ Редактор шаблонов
-AppEng.Blocks.AssemblerContainmentWall.name=МЕ Корпус сборочного цеха
-AppEng.Blocks.Chest.name=МЕ Сундук
-AppEng.Blocks.Cable.name=МЕ Кабель
-AppEng.Blocks.CoveredCable.name=МЕ Замаскированный кабель
-AppEng.Blocks.Controller.name=МЕ Контроллер
-AppEng.Blocks.CraftingCPU.name=МЕ Сборочный Процессор
-AppEng.Blocks.CraftingMonitor.name=МЕ Сборочный Монитор
-AppEng.Blocks.CraftingTerminal.name=МЕ Сборочный Терминал
-AppEng.Blocks.DarkCable.name=МЕ Чёрный Кабель
-AppEng.Blocks.Drive.name=МЕ Привод
-AppEng.Blocks.HeatVent.name=МЕ Тепловыводящий елемент
-AppEng.Blocks.ImportBus.name=МЕ Импортирующая шина 
-AppEng.Blocks.ImportBusFuzzy.name=МЕ Интерактивная импортирующая шина 
-AppEng.Blocks.ImportBusPrecision.name=МЕ Точная импортирующая шина
-AppEng.Blocks.Interface.name=МЕ Интерфейс
-AppEng.Blocks.IOPort.name=МЕ IO Порт
-AppEng.Blocks.LevelEmitter.name=МЕ Излучатель сигнала
-AppEng.Blocks.ExportBus.name=МЕ Основная экспортирующая шина
-AppEng.Blocks.ExportBusFuzzy.name=МЕ Интерактивная экспортирующая шина
-AppEng.Blocks.ExportBusPrecision.name=МЕ Точная экспортирующая шина
-AppEng.Blocks.P2PTunnel.name=МЕ P2P Туннель
-AppEng.Blocks.PatternEncoder.name=МЕ Кодировщик Шаблонов
-AppEng.Blocks.Preformatter.name=МЕ Редактор карт памяти
-AppEng.Blocks.StorageBus.name=МЕ Шина взаимодействия
-AppEng.Blocks.StorageBusFuzzy.name=МЕ Интерактивная шина взаимодействия
-AppEng.Blocks.StorageMonitor.name=МЕ Монитор
-AppEng.Blocks.Terminal.name=МЕ Терминал Доступа
-AppEng.Blocks.WirelessAccessPoint.name=МЕ Точка беспроводного доступа
+AppEng.Tools.MassCannon.name=МЭ пушка
+AppEng.Blocks.OreQuartz.name=Крепкая кварцевая руда
+AppEng.Blocks.PatternProvider.name=МЭ редактор шаблонов
+AppEng.Blocks.AssemblerContainmentWall.name=МЭ корпус сборочного цеха
+AppEng.Blocks.Chest.name=МЭ сундук
+AppEng.Blocks.Cable.name=МЭ кабель
+AppEng.Blocks.CoveredCable.name=МЭ замаскированный кабель
+AppEng.Blocks.Controller.name=МЭ контроллер
+AppEng.Blocks.CraftingCPU.name=МЭ сборочный процессор
+AppEng.Blocks.CraftingMonitor.name=МЭ сборочный монитор
+AppEng.Blocks.CraftingTerminal.name=МЭ сборочный терминал
+AppEng.Blocks.DarkCable.name=МЭ чёрный кабель
+AppEng.Blocks.Drive.name=МЭ привод
+AppEng.Blocks.HeatVent.name=МЭ тепловыводящий элемент
+AppEng.Blocks.ImportBus.name=МЭ импортирующая шина 
+AppEng.Blocks.ImportBusFuzzy.name=МЭ интерактивная импортирующая шина 
+AppEng.Blocks.ImportBusPrecision.name=МЭ точная импортирующая шина
+AppEng.Blocks.Interface.name=МЭ интерфейс
+AppEng.Blocks.IOPort.name=МЭ IO порт
+AppEng.Blocks.LevelEmitter.name=МЭ излучатель сигнала
+AppEng.Blocks.ExportBus.name=МЭ основная экспортирующая шина
+AppEng.Blocks.ExportBusFuzzy.name=МЭ интерактивная экспортирующая шина
+AppEng.Blocks.ExportBusPrecision.name=МЭ точная экспортирующая шина
+AppEng.Blocks.P2PTunnel.name=МЭ P2P туннель
+AppEng.Blocks.PatternEncoder.name=МЭ кодировщик шаблонов
+AppEng.Blocks.Partitioner.name=МЭ редактор карт памяти
+AppEng.Blocks.StorageBus.name=МЭ шина взаимодействия
+AppEng.Blocks.StorageBusFuzzy.name=МЭ интерактивная шина взаимодействия
+AppEng.Blocks.StorageMonitor.name=МЭ монитор
+AppEng.Blocks.Terminal.name=МЭ терминал доступа
+AppEng.Blocks.WirelessAccessPoint.name=МЭ точка беспроводного доступа
 AppEng.Blocks.GrindStone.name=Ручной дробитель
+AppEng.Blocks.TransitionPlane.name=МЭ разрушитель блоков
+AppEng.Blocks.Quartz.name=Блок крепкого кварца
+AppEng.Blocks.EnergyCell.name=Энергетическая камера
+AppEng.Blocks.Condenser.name=МЭ конденсатор
+AppEng.Blocks.PowerRelay.name=МЭ силовое реле
 AppEng.Colors.Blue=Синий
 AppEng.Colors.Black=Чёрный
 AppEng.Colors.White=Белый
@@ -158,3 +203,14 @@ AppEng.Colors.Brown=Коричневый
 AppEng.Colors.Red=Красный
 AppEng.Colors.Yellow=Жёлтый
 AppEng.Colors.Green=Зелёный
+ChatMsg.NoPowerCM=У монитора крафта нет энергии.
+ChatMsg.NoPowerSM=У МЭ монитора нет энергии.
+ChatMsg.NoController=Невозможно сообщиться с контроллером.
+ChatMsg.Locked=МЭ монитор сейчас закрыт.
+ChatMsg.Unlocked=МЭ монитор сейчас открыт.
+ChatMsg.TermNotLinked=МЭ беспроводной терминал доступа - нет связи
+ChatMsg.TermNoPower=МЭ беспроводной терминал доступа - нет питания
+ChatMsg.TermNoSignal=МЭ беспроводной терминал доступа - нет сигнала
+ChatMsg.AmmoDepleted=Боеприпасы исчерпанны.
+death.attack.masscannon=%1$s был не на том конце МЭ пушки.
+itemGroup.Applied Energistics=Applied Energistics Tab
