--- a/de_DE.properties
+++ b/de_DE.properties
@@ -137,7 +137,7 @@ AppEng.Materials.FluxQuartz.name=Fluix-Kristall
 AppEng.Materials.FluxPearl.name=Fluix-Perle
 AppEng.Materials.PotentiaQuartz.name=Potentia-Kristall
 AppEng.Materials.FluxQuartzDust.name=Fluix-Staub
-AppEng.Materials.Silicon.name=Silikon
+AppEng.Materials.Silicon.name=Silizium
 AppEng.Materials.StorageBlock.name=Speicherblock
 AppEng.Materials.StorageCell.name=Speicherzelle
 AppEng.Materials.StorageCellHousing.name=Speichergeh\u00E4use
