--- a/de_DE.properties
+++ b/de_DE.properties
@@ -6,7 +6,7 @@ AppEng.Gui.Controller=ME-Kern
 AppEng.Gui.Crafting=ME-Fertigung
 AppEng.Gui.CraftingMonitor=ME-Fertigungsmonitor
 AppEng.Gui.GrindStone=M\u00FChlstein
-AppEng.Gui.CTerminal=ME-Fertigungskonsole
+AppEng.Gui.CTerminal=Fert.-Konsole
 AppEng.Gui.CurrentlyCrafting=Aktuelle Fertigung
 AppEng.Gui.Drive=ME-Laufwerk
 AppEng.Gui.Encode=Kodieren
