update for rv12.a and alter some item
update for rv12.a and alter some item

--- a/zh_CN.properties
+++ b/zh_CN.properties
@@ -33,6 +33,7 @@ AppEng.Gui.Processing=自动化处理
 AppEng.Gui.StorageBus=ME存储总线
 AppEng.Gui.SubJob=要取消作业或下属作业，\n按住shift左键单击物品
 AppEng.Gui.Terminal=ME终端
+AppEng.Gui.QuantumLink=ME量子连接室
 AppEng.Gui.WirelessAccessPoint=ME无线接入点
 AppEng.Gui.PowerRelay=ME能源继电器
 AppEng.Gui.Online=已开启
@@ -43,6 +44,10 @@ AppEng.Gui.Rate=Units/t
 AppEng.Gui.Conflict=控制器冲突
 AppEng.GuiButtons.Next=下一页
 AppEng.GuiButtons.Prev=上一页
+AppEng.GuiITooltip.IOMode=输入/输出模式
+AppEng.GuiITooltip.Read=仅读取
+AppEng.GuiITooltip.Write=仅写入
+AppEng.GuiITooltip.ReadWrite=读取与写入
 AppEng.GuiITooltip.Linked=已连接
 AppEng.GuiITooltip.Unlinked=未连接
 AppEng.GuiITooltip.Preconfigured=预配置
@@ -62,7 +67,7 @@ AppEng.GuiITooltip.Enable=允许
 AppEng.GuiITooltip.Disabled=禁止
 AppEng.GuiITooltip.Trash=销毁物品
 AppEng.GuiITooltip.MatterBalls=压缩成物质球(每\n%s个物品压缩成1个)
-AppEng.GuiITooltip.Singularity=压缩成奇异球(每\n%s个物品压缩成1个)
+AppEng.GuiITooltip.Singularity=压缩成奇异点(每\n%s个物品压缩成1个)
 AppEng.GuiITooltip.PartitionStorage=分区存储
 AppEng.GuiITooltip.PartitionStorageHint=根据目前的存储项目配置分区
 AppEng.GuiITooltip.Crafts=制作
@@ -75,7 +80,7 @@ AppEng.GuiITooltip.ActiveOnPulse=每提供一个红石信号激活一次
 AppEng.GuiITooltip.ActiveWithoutSignal=无红石信号时激活
 AppEng.GuiITooltip.ActiveWithSignal=有红石信号时激活
 AppEng.GuiITooltip.AlwaysActive=总是激活的
-AppEng.GuiITooltip.Cell=Cell
+AppEng.GuiITooltip.Cell=单元
 AppEng.GuiITooltip.Craftable=合成的物品
 AppEng.GuiITooltip.CraftItems=总是输出合成的物品
 AppEng.GuiITooltip.EmitLevelAbove=当数量超过限制数量时发射红石信号
@@ -127,13 +132,13 @@ AppEng.Materials.IronDust.name=铁粉
 AppEng.Materials.MEAdvancedProcessor.name=ME高级处理器
 AppEng.Materials.MEBasicProcessor.name=ME基础处理器
 AppEng.Materials.MEBlankPattern.name=ME空白样板
-AppEng.Materials.QuartzCrystal.name=瑟特斯石英
+AppEng.Materials.QuartzCrystal.name=赛特斯石英
 AppEng.Materials.QuartzDustNether.name=下界石英粉
-AppEng.Materials.QuartzDust.name=瑟特斯石英粉
-AppEng.Materials.FluxQuartz.name=福鲁艾肯斯水晶
-AppEng.Materials.FluxPearl.name=福鲁艾肯斯珍珠
+AppEng.Materials.QuartzDust.name=赛特斯石英粉
+AppEng.Materials.FluxQuartz.name=弗鲁伊克斯水晶
+AppEng.Materials.FluxPearl.name=弗鲁伊克斯珍珠
 AppEng.Materials.PotentiaQuartz.name=能量水晶
-AppEng.Materials.FluxQuartzDust.name=福鲁艾肯斯粉
+AppEng.Materials.FluxQuartzDust.name=弗鲁伊克斯粉
 AppEng.Materials.Silicon.name=硅
 AppEng.Materials.StorageBlock.name=存储块
 AppEng.Materials.StorageCell.name=存储元
@@ -146,7 +151,9 @@ AppEng.Materials.WoodenCrank.name=木制曲柄
 AppEng.Materials.WoodenGear.name=木齿轮
 AppEng.Materials.IronNugget.name=铁粒
 AppEng.Materials.MatterBall.name=物质球
-AppEng.Materials.Singularity.name=奇异球
+AppEng.Materials.Singularity.name=奇异点
+AppEng.Materials.EnderPearlDust.name=末影珍珠粉
+AppEng.Materials.QuantumEntangledSingularity.name=量子环绕的奇异点
 AppEng.Sizes.1000=K
 AppEng.Sizes.1000000=M
 AppEng.Sizes.1000000000=B
@@ -162,7 +169,8 @@ AppEng.Tools.QuartzWrench.name=石英扳手
 AppEng.Tools.VibrationCatalyst.name=振动催化剂
 AppEng.Tools.EntropyAccelerator.name=熵加速器
 AppEng.Tools.MassCannon.name=物质炮
-AppEng.Blocks.OreQuartz.name=瑟特斯石英矿石
+AppEng.Blocks.PhantomBlock.name=木制曲柄
+AppEng.Blocks.OreQuartz.name=赛特斯石英矿石
 AppEng.Blocks.PatternProvider.name=ME样板提供器
 AppEng.Blocks.AssemblerContainmentWall.name=ME装配室外墙
 AppEng.Blocks.Chest.name=ME箱子
@@ -194,10 +202,15 @@ AppEng.Blocks.Terminal.name=ME接入终端
 AppEng.Blocks.WirelessAccessPoint.name=ME无线接入点
 AppEng.Blocks.GrindStone.name=研磨石
 AppEng.Blocks.TransitionPlane.name=ME转换刨工机
-AppEng.Blocks.Quartz.name=瑟特斯石英方块
+AppEng.Blocks.Quartz.name=赛特斯石英方块
 AppEng.Blocks.EnergyCell.name=能量单元
 AppEng.Blocks.Condenser.name=ME压缩机
 AppEng.Blocks.PowerRelay.name=ME能源继电器
+AppEng.Blocks.QuantumLink.name=量子连接室
+AppEng.Blocks.QuantumRing.name=量子场环
+AppEng.Blocks.QuartzGlass.name=石英玻璃
+AppEng.Blocks.QuartzLamp.name=振动石英玻璃
+AppEng.Blocks.TinyTNT.name=小型TNT
 AppEng.Colors.Blue=蓝色
 AppEng.Colors.Black=黑色
 AppEng.Colors.White=白色
@@ -215,4 +228,4 @@ ChatMsg.TermNoPower=无线接入终端-没有能量
 ChatMsg.TermNoSignal=无线接入终端-没有信号
 ChatMsg.AmmoDepleted=弹药已使用完
 death.attack.masscannon=%1$s 后悔错误地出现在了物质炮炮口的对面。
-itemGroup.Applied Energistics=应用动力
+itemGroup.Applied Energistics=应用能源
