add stuff for rv13-dev1
Found two Bugs:
1. Typo in en_US at GuiITooltip.NonBlocking: Ignore the conets.
2. Missing 256 Value at GuiITooltip.MatterBalls:Condense Into Matter Balls %s per items

--- a/de_DE.properties
+++ b/de_DE.properties
@@ -40,8 +40,28 @@ AppEng.Gui.LowPower=Keine Energie!
 AppEng.Gui.EnergyUsed=Energieverbrauch
 AppEng.Gui.Rate=Einheiten / t
 AppEng.Gui.Conflict=Kernkonflikt
+AppEng.Gui.Blacklisted=Gesperrt
+AppEng.Gui.Whitelisted=Erlaubt
 AppEng.GuiButtons.Next=Vor
 AppEng.GuiButtons.Prev=Zur\u00FCck
+AppEng.GuiITooltip.PowerUnits=Energieeinheiten
+AppEng.GuiITooltip.AEUnits=Applied Energistics
+AppEng.GuiITooltip.EUUnits=Industrial Craft2
+AppEng.GuiITooltip.MJUnits=Buildcraft
+AppEng.GuiITooltip.UEUnits=Universial Electricity
+AppEng.GuiITooltip.SearchMode=Suchfeld-Modus
+AppEng.GuiITooltip.SearchMode_Auto=Automatische Suche
+AppEng.GuiITooltip.SearchMode_Standard=Standart-Suche
+AppEng.GuiITooltip.SearchMode_NEIAuto=Automatische Suche mit NEI
+AppEng.GuiITooltip.SearchMode_NEIStandard=Standart-Suche mit NEI
+AppEng.GuiITooltip.ClearCraftingGrid=Entfernt Gegenst\u00e4nde aus Fertigungsfeld und speichert sie.
+AppEng.GuiITooltip.InterfaceCraftingMode=Fertigungs-Modus
+AppEng.GuiITooltip.Craft=Fertigt Gegenst\u00e4nde wenn ben\u00f6tigt beim Export.
+AppEng.GuiITooltip.DontCraft=Nutzt nur Gegenst\u00e4nde aus dem Speicher beim Export.
+AppEng.GuiITooltip.InterfaceBlockingMode=Sperr-Modus
+AppEng.GuiITooltip.Blocking=Nicht fertigen wenn Zielinventar Gegenst\u00e4nde enth\u00e4lt.
+AppEng.GuiITooltip.NonBlocking=Inhalt des Zielinventars ignorieren.
+AppEng.GuiITooltip.Blank=Blank
 AppEng.GuiITooltip.IOMode=Input/Output Modus
 AppEng.GuiITooltip.Read=Daten nur lesen
 AppEng.GuiITooltip.Write=Daten nur schreiben
@@ -114,6 +134,7 @@ AppEng.GuiITooltip.FuzzyMode.Percent_50=Aufteilen bei 50%
 AppEng.GuiITooltip.FuzzyMode.Percent_75=Aufteilen bei 75%
 AppEng.GuiITooltip.FuzzyMode.Percent_99=Aufteilen bei 99%
 AppEng.GuiITooltip.FuzzyMode.IgnoreAll=Besch\u00e4digungsgrad ignorieren
+AppEng.Items.0k.name=0k-ME-Kreativ-Speicher
 AppEng.Items.1k.name=1k-ME-Speicher
 AppEng.Items.4k.name=4k-ME-Speicher
 AppEng.Items.16k.name=16k-ME-Speicher
@@ -121,6 +142,7 @@ AppEng.Items.64k.name=64k-ME-Speicher
 AppEng.Items.BlankPattern.name=Blanke ME-Schablone
 AppEng.Items.EncPattern.name=Kodierte ME-Schablone
 AppEng.Items.WirelessTerminal.name=Drahtlose ME-Zugangskonsole
+AppEng.Items.MemoryCard.name=ME-Bus Chip-Karte
 AppEng.Materials.AdvancedProcessorAssembly.name=Gro\u00dfprozessor-Bausatz
 AppEng.Materials.BasicProcessorAssembly.name=Basisprozessor-Bausatz
 AppEng.Materials.ConversionMatrix.name=Umrechnungs-Matrix
