--- a/zh_CN.properties
+++ b/zh_CN.properties
@@ -20,21 +20,21 @@ AppEng.Gui.Condenser=ME压缩机
 AppEng.Gui.ImportBus=ME输出总线
 AppEng.Gui.Interface=ME接口
 AppEng.Gui.IOPort=ME IO端口
-AppEng.Gui.LevelEmitter=ME信号发射器
+AppEng.Gui.LevelEmitter=ME发信器
 AppEng.Gui.MAC=ME分子装配室
 AppEng.Gui.MissingMaterials=缺少材料
 AppEng.Gui.Name=名称： 
 AppEng.Gui.P2PTunnel=ME P2P通道
-AppEng.Gui.PatternEncoder=ME样板编码器
-AppEng.Gui.PatternProvider=ME样板提供器
+AppEng.Gui.PatternEncoder=ME模板编码器
+AppEng.Gui.PatternProvider=ME模板提供器
 AppEng.Gui.Partitioner=ME分区编辑器
 AppEng.Gui.Priority=ME存储优先级
 AppEng.Gui.Processing=自动化处理
 AppEng.Gui.StorageBus=ME存储总线
-AppEng.Gui.SubJob=要取消作业或下属作业，\n按住shift左键单击物品
+AppEng.Gui.SubJob=要取消作业或下属作业,\n按住shift左键单击物品
 AppEng.Gui.Terminal=ME终端
-AppEng.Gui.QuantumLink=ME量子连接室
-AppEng.Gui.WirelessAccessPoint=ME无线接入点
+AppEng.Gui.QuantumLink=ME量子链接室
+AppEng.Gui.WirelessAccessPoint=ME无线热点
 AppEng.Gui.PowerRelay=ME能源继电器
 AppEng.Gui.Online=已开启
 AppEng.Gui.Offline=未开启
@@ -47,7 +47,7 @@ AppEng.GuiButtons.Prev=上一页
 AppEng.GuiITooltip.IOMode=输入/输出模式
 AppEng.GuiITooltip.Read=仅读取
 AppEng.GuiITooltip.Write=仅写入
-AppEng.GuiITooltip.ReadWrite=读取与写入
+AppEng.GuiITooltip.ReadWrite=读取/写入
 AppEng.GuiITooltip.Linked=已连接
 AppEng.GuiITooltip.Unlinked=未连接
 AppEng.GuiITooltip.Preconfigured=预配置
@@ -56,30 +56,30 @@ Appeng.GuiITooltip.Partitioned=匹配模式
 Appeng.GuiITooltip.Fuzzy=模糊
 Appeng.GuiITooltip.Precise=精确
 Appeng.GuiITooltip.Ammo=弹药
-Appeng.GuiITooltip.BytesUsed=字节已使用
+Appeng.GuiITooltip.BytesUsed=字节已被使用
 Appeng.GuiITooltip.Types=种类型
 Appeng.GuiITooltip.Of=/
 Appeng.GuiITooltip.NoAmmoAvailable=没有弹药可用
-Appeng.GuiITooltip.AccumulatedEnergy=累积的能量
+Appeng.GuiITooltip.AccumulatedEnergy=累积能量
 AppEng.GuiITooltip.CondenserOutput=输出口
-AppEng.GuiITooltip.TrashController=是否允许按住shift/空格进行点击
+AppEng.GuiITooltip.TrashController=是否允许按住shift键/空格进行点击
 AppEng.GuiITooltip.Enable=允许
 AppEng.GuiITooltip.Disabled=禁止
 AppEng.GuiITooltip.Trash=销毁物品
 AppEng.GuiITooltip.MatterBalls=压缩成物质球(每\n%s个物品压缩成1个)
-AppEng.GuiITooltip.Singularity=压缩成奇异点(每\n%s个物品压缩成1个)
+AppEng.GuiITooltip.Singularity=压缩成奇点(每\n%s个物品压缩成1个)
 AppEng.GuiITooltip.PartitionStorage=分区存储
-AppEng.GuiITooltip.PartitionStorageHint=根据目前的存储项目配置分区
+AppEng.GuiITooltip.PartitionStorageHint=根据目前存储项目配置分区
 AppEng.GuiITooltip.Crafts=制作
 AppEng.GuiITooltip.With=需要
 AppEng.GuiITooltip.and=和
 AppEng.GuiITooltip.MatchingMode=分区匹配模式
 AppEng.GuiITooltip.MatchingFuzzy=模糊
 AppEng.GuiITooltip.MatchingExact=精确
-AppEng.GuiITooltip.ActiveOnPulse=每提供一个红石信号激活一次
+AppEng.GuiITooltip.ActiveOnPulse=每出现一次红石信号激活一次
 AppEng.GuiITooltip.ActiveWithoutSignal=无红石信号时激活
 AppEng.GuiITooltip.ActiveWithSignal=有红石信号时激活
-AppEng.GuiITooltip.AlwaysActive=总是激活的
+AppEng.GuiITooltip.AlwaysActive=保持激活
 AppEng.GuiITooltip.Cell=单元
 AppEng.GuiITooltip.Craftable=合成的物品
 AppEng.GuiITooltip.CraftItems=总是输出合成的物品
@@ -99,7 +99,7 @@ AppEng.GuiITooltip.RedstoneMode=红石控制
 AppEng.GuiITooltip.SortBy=排序方式
 AppEng.GuiITooltip.SortOrder=排序方向
 AppEng.GuiITooltip.StackMode=传输模式
-AppEng.GuiITooltip.StoredCraftable=存储的物品/合成的物品
+AppEng.GuiITooltip.StoredCraftable=存储物品/合成物品
 AppEng.GuiITooltip.StoredItems=存储的物品
 AppEng.GuiITooltip.ToggleSortDirection=切换排序方向
 AppEng.GuiITooltip.TransferDirection=传送方向
@@ -120,9 +120,9 @@ AppEng.Items.1k.name=ME 1k存储器
 AppEng.Items.4k.name=ME 4k存储器
 AppEng.Items.16k.name=ME 16k存储器
 AppEng.Items.64k.name=ME 64k存储器
-AppEng.Items.BlankPattern.name=ME空样板
-AppEng.Items.EncPattern.name=ME编码样板
-AppEng.Items.WirelessTerminal.name=ME无线接入终端
+AppEng.Items.BlankPattern.name=ME空白模板
+AppEng.Items.EncPattern.name=ME编码模板
+AppEng.Items.WirelessTerminal.name=ME无线热点
 AppEng.Materials.AdvancedProcessorAssembly.name=高级处理器部件
 AppEng.Materials.BasicProcessorAssembly.name=基础处理器部件
 AppEng.Materials.ConversionMatrix.name=转换矩阵
@@ -131,12 +131,12 @@ AppEng.Materials.GoldDust.name=金粉
 AppEng.Materials.IronDust.name=铁粉
 AppEng.Materials.MEAdvancedProcessor.name=ME高级处理器
 AppEng.Materials.MEBasicProcessor.name=ME基础处理器
-AppEng.Materials.MEBlankPattern.name=ME空白样板
+AppEng.Materials.MEBlankPattern.name=ME空白模板
 AppEng.Materials.QuartzCrystal.name=赛特斯石英
 AppEng.Materials.QuartzDustNether.name=下界石英粉
 AppEng.Materials.QuartzDust.name=赛特斯石英粉
-AppEng.Materials.FluxQuartz.name=弗鲁伊克斯水晶
-AppEng.Materials.FluxPearl.name=弗鲁伊克斯珍珠
+AppEng.Materials.FluxQuartz.name=弗莱克斯水晶
+AppEng.Materials.FluxPearl.name=弗莱克斯珍珠
 AppEng.Materials.PotentiaQuartz.name=能量水晶
 AppEng.Materials.FluxQuartzDust.name=弗鲁伊克斯粉
 AppEng.Materials.Silicon.name=硅
@@ -145,33 +145,33 @@ AppEng.Materials.StorageCell.name=存储元
 AppEng.Materials.StorageCellHousing.name=存储单元室
 AppEng.Materials.StorageCluster.name=存储簇
 AppEng.Materials.StorageSegment.name=存储段
-AppEng.Materials.WirelessBooster.name=无线延长器
+AppEng.Materials.WirelessBooster.name=无线信号增强器
 AppEng.Materials.WirelessReceiver.name=无线接收器
 AppEng.Materials.WoodenCrank.name=木制曲柄
 AppEng.Materials.WoodenGear.name=木齿轮
 AppEng.Materials.IronNugget.name=铁粒
 AppEng.Materials.MatterBall.name=物质球
-AppEng.Materials.Singularity.name=奇异点
+AppEng.Materials.Singularity.name=奇点
 AppEng.Materials.EnderPearlDust.name=末影珍珠粉
-AppEng.Materials.QuantumEntangledSingularity.name=量子环绕的奇异点
+AppEng.Materials.QuantumEntangledSingularity.name=量子纠缠的奇点
 AppEng.Sizes.1000=K
 AppEng.Sizes.1000000=M
 AppEng.Sizes.1000000000=B
-AppEng.Terminal.Craft=制作
+AppEng.Terminal.Craft=合成
 AppEng.Terminal.LP=LP
 AppEng.Tools.QuartzAxe.name=石英斧
-AppEng.Tools.QuartzCuttingKnife.name=石英刀
+AppEng.Tools.QuartzCuttingKnife.name=石英切割刀
 AppEng.Tools.QuartzHoe.name=石英锄
 AppEng.Tools.QuartzPickAxe.name=石英镐
-AppEng.Tools.QuartzShovel.name=石英锹
+AppEng.Tools.QuartzShovel.name=石英铲
 AppEng.Tools.QuartzSword.name=石英剑
 AppEng.Tools.QuartzWrench.name=石英扳手
-AppEng.Tools.VibrationCatalyst.name=振动催化剂
+AppEng.Tools.VibrationCatalyst.name=振荡催化剂
 AppEng.Tools.EntropyAccelerator.name=熵加速器
 AppEng.Tools.MassCannon.name=物质炮
 AppEng.Blocks.PhantomBlock.name=木制曲柄
 AppEng.Blocks.OreQuartz.name=赛特斯石英矿石
-AppEng.Blocks.PatternProvider.name=ME样板提供器
+AppEng.Blocks.PatternProvider.name=ME模板供应器
 AppEng.Blocks.AssemblerContainmentWall.name=ME装配室外墙
 AppEng.Blocks.Chest.name=ME箱子
 AppEng.Blocks.Cable.name=ME电缆
@@ -193,23 +193,23 @@ AppEng.Blocks.ExportBus.name=ME基础输出总线
 AppEng.Blocks.ExportBusFuzzy.name=ME模糊输出总线
 AppEng.Blocks.ExportBusPrecision.name=ME精确输出总线
 AppEng.Blocks.P2PTunnel.name=ME P2P通道
-AppEng.Blocks.PatternEncoder.name=ME样板编辑器
+AppEng.Blocks.PatternEncoder.name=ME模板编码器
 AppEng.Blocks.Partitioner.name=ME分区编辑器
 AppEng.Blocks.StorageBus.name=ME精确存储总线
 AppEng.Blocks.StorageBusFuzzy.name=ME模糊存储总线
 AppEng.Blocks.StorageMonitor.name=ME存储监控器
 AppEng.Blocks.Terminal.name=ME接入终端
-AppEng.Blocks.WirelessAccessPoint.name=ME无线接入点
+AppEng.Blocks.WirelessAccessPoint.name=ME无线热点
 AppEng.Blocks.GrindStone.name=研磨石
 AppEng.Blocks.TransitionPlane.name=ME转换刨工机
 AppEng.Blocks.Quartz.name=赛特斯石英方块
 AppEng.Blocks.EnergyCell.name=能量单元
 AppEng.Blocks.Condenser.name=ME压缩机
 AppEng.Blocks.PowerRelay.name=ME能源继电器
-AppEng.Blocks.QuantumLink.name=量子连接室
-AppEng.Blocks.QuantumRing.name=量子场环
+AppEng.Blocks.QuantumLink.name=量子链接室
+AppEng.Blocks.QuantumRing.name=量子场域环
 AppEng.Blocks.QuartzGlass.name=石英玻璃
-AppEng.Blocks.QuartzLamp.name=振动石英玻璃
+AppEng.Blocks.QuartzLamp.name=振荡石英玻璃
 AppEng.Blocks.TinyTNT.name=小型TNT
 AppEng.Colors.Blue=蓝色
 AppEng.Colors.Black=黑色
@@ -224,8 +224,8 @@ ChatMsg.NoController=无法连接到ME控制器
 ChatMsg.Locked=存储监控器已上锁
 ChatMsg.Unlocked=存储监控器已解锁
 ChatMsg.TermNotLinked=无线接入终端-未连接
-ChatMsg.TermNoPower=无线接入终端-没有能量
-ChatMsg.TermNoSignal=无线接入终端-没有信号
-ChatMsg.AmmoDepleted=弹药已使用完
+ChatMsg.TermNoPower=无线接入终端-无能量
+ChatMsg.TermNoSignal=无线接入终端-无信号
+ChatMsg.AmmoDepleted=弹药已耗尽
 death.attack.masscannon=%1$s 后悔错误地出现在了物质炮炮口的对面。
 itemGroup.Applied Energistics=应用能源
