--- a/zh_CN.properties
+++ b/zh_CN.properties
@@ -122,7 +122,7 @@ AppEng.Items.16k.name=ME 16k存储器
 AppEng.Items.64k.name=ME 64k存储器
 AppEng.Items.BlankPattern.name=ME空白模板
 AppEng.Items.EncPattern.name=ME编码模板
-AppEng.Items.WirelessTerminal.name=ME无线热点
+AppEng.Items.WirelessTerminal.name=ME无线终端
 AppEng.Materials.AdvancedProcessorAssembly.name=高级处理器部件
 AppEng.Materials.BasicProcessorAssembly.name=基础处理器部件
 AppEng.Materials.ConversionMatrix.name=转换矩阵
