--- a/de_DE.properties
+++ b/de_DE.properties
@@ -51,9 +51,9 @@ AppEng.GuiITooltip.MJUnits=Buildcraft
 AppEng.GuiITooltip.UEUnits=Universial Electricity
 AppEng.GuiITooltip.SearchMode=Suchfeld-Modus
 AppEng.GuiITooltip.SearchMode_Auto=Automatische Suche
-AppEng.GuiITooltip.SearchMode_Standard=Standart-Suche
+AppEng.GuiITooltip.SearchMode_Standard=Standard-Suche
 AppEng.GuiITooltip.SearchMode_NEIAuto=Automatische Suche mit NEI
-AppEng.GuiITooltip.SearchMode_NEIStandard=Standart-Suche mit NEI
+AppEng.GuiITooltip.SearchMode_NEIStandard=Standard-Suche mit NEI
 AppEng.GuiITooltip.ClearCraftingGrid=Entfernt Gegenst\u00e4nde aus Fertigungsfeld und speichert sie.
 AppEng.GuiITooltip.InterfaceCraftingMode=Fertigungs-Modus
 AppEng.GuiITooltip.Craft=Fertigt Gegenst\u00e4nde wenn ben\u00f6tigt beim Export.
@@ -142,7 +142,7 @@ AppEng.Items.64k.name=64k-ME-Speicher
 AppEng.Items.BlankPattern.name=Blanke ME-Schablone
 AppEng.Items.EncPattern.name=Kodierte ME-Schablone
 AppEng.Items.WirelessTerminal.name=Drahtlose ME-Zugangskonsole
-AppEng.Items.MemoryCard.name=ME-Bus Chip-Karte
+AppEng.Items.MemoryCard.name=ME-Bus-Speicherkarte
 AppEng.Materials.AdvancedProcessorAssembly.name=Gro\u00dfprozessor-Bausatz
 AppEng.Materials.BasicProcessorAssembly.name=Basisprozessor-Bausatz
 AppEng.Materials.ConversionMatrix.name=Umrechnungs-Matrix
@@ -180,15 +180,16 @@ AppEng.Sizes.1000000000=B
 AppEng.Terminal.Craft=Fertigen
 AppEng.Terminal.LP=LP
 AppEng.Tools.QuartzAxe.name=Quarzaxt
-AppEng.Tools.QuartzCuttingKnife.name=Quarzmei\u00dfel
+AppEng.Tools.QuartzCuttingKnife.name=Quarzmei\u00DFel
 AppEng.Tools.QuartzHoe.name=Quarzhacke
 AppEng.Tools.QuartzPickAxe.name=Quarzspitzhacke
 AppEng.Tools.QuartzShovel.name=Quarzschaufel
 AppEng.Tools.QuartzSword.name=Quarzschwert
-AppEng.Tools.QuartzWrench.name=Quarzschraubenschl\u00FCssel
+AppEng.Tools.QuartzWrench.name=Quarzschraubenschl\u00fcssel
 AppEng.Tools.VibrationCatalyst.name=Schwingungskatalysator
 AppEng.Tools.EntropyAccelerator.name=Entropiebeschleuniger
 AppEng.Tools.MassCannon.name=Materiekanone
+AppEng.Blocks.PhantomBlock.name=H\u00f6lzerne Kurbel
 AppEng.Blocks.OreQuartz.name=Certus-Quarzerz
 AppEng.Blocks.PatternProvider.name=ME-Schablonenkammer
 AppEng.Blocks.AssemblerContainmentWall.name=Molekulare ME-Kammerschutzwand
@@ -246,5 +247,8 @@ ChatMsg.TermNotLinked=Drahtlose Zugangskonsole - Nicht synchronisiert
 ChatMsg.TermNoPower=Drahtlose Zugangskonsole - Keine Energie
 ChatMsg.TermNoSignal=Drahtlose Zugangskonsole - Kein Empfang
 ChatMsg.AmmoDepleted=Munition verbraucht.
+ChatMsg.SettingsLoaded=Einstellungen von Speicherkarte geladen
+ChatMsg.SettingsSaved=Einstellungen auf Speicherkarte gespeichert
+ChatMsg.IncorrectDevice=Einstellungen sind f\u00fcr ein anderes Ger\u00e4t
 death.attack.masscannon=%1$s wurde von einer Materiekanone atomisiert.
 itemGroup.Applied Energistics=Applied Energistics
