--- a/de_DE.properties
+++ b/de_DE.properties
@@ -180,12 +180,12 @@ AppEng.Sizes.1000000000=B
 AppEng.Terminal.Craft=Fertigen
 AppEng.Terminal.LP=LP
 AppEng.Tools.QuartzAxe.name=Quarzaxt
-AppEng.Tools.QuartzCuttingKnife.name=Quarzmei\u00DFel
+AppEng.Tools.QuartzCuttingKnife.name=Quarzmei\u00dfel
 AppEng.Tools.QuartzHoe.name=Quarzhacke
 AppEng.Tools.QuartzPickAxe.name=Quarzspitzhacke
 AppEng.Tools.QuartzShovel.name=Quarzschaufel
 AppEng.Tools.QuartzSword.name=Quarzschwert
-AppEng.Tools.QuartzWrench.name=Quarzschraubenschl\u00fcssel
+AppEng.Tools.QuartzWrench.name=Quarzschraubenschl\u00FCssel
 AppEng.Tools.VibrationCatalyst.name=Schwingungskatalysator
 AppEng.Tools.EntropyAccelerator.name=Entropiebeschleuniger
 AppEng.Tools.MassCannon.name=Materiekanone
