--- a/de_DE.properties
+++ b/de_DE.properties
@@ -58,8 +58,8 @@ AppEng.GuiITooltip.SearchMode_NEIAuto=Automatische Suche mit NEI
 AppEng.GuiITooltip.SearchMode_NEIStandard=Standard-Suche mit NEI
 AppEng.GuiITooltip.ClearCraftingGrid=Entfernt Gegenst\u00e4nde aus Fertigungsfeld und speichert sie.
 AppEng.GuiITooltip.InterfaceCraftingMode=Fertigungs-Modus
-AppEng.GuiITooltip.Craft=Fertigt Gegenst\u00e4nde wenn ben\u00f6tigt beim Export.
-AppEng.GuiITooltip.DontCraft=Nutzt nur Gegenst\u00e4nde aus dem Speicher beim Export.
+AppEng.GuiITooltip.Craft=Fertigt Gegenst\u00e4nde, wenn ben\u00f6tigt f\u00fcr Export.
+AppEng.GuiITooltip.DontCraft=Nutzt nur Gegenst\u00e4nde aus dem Speicher f\u00fcr Export.
 AppEng.GuiITooltip.InterfaceBlockingMode=Sperr-Modus
 AppEng.GuiITooltip.Blocking=Nicht fertigen wenn Zielinventar Gegenst\u00e4nde enth\u00e4lt.
 AppEng.GuiITooltip.NonBlocking=Inhalt des Zielinventars ignorieren.
@@ -103,8 +103,8 @@ AppEng.GuiITooltip.AlwaysActive=Immer aktiv
 AppEng.GuiITooltip.Cell=Zelle
 AppEng.GuiITooltip.Craftable=Fertigunsbereit
 AppEng.GuiITooltip.CraftItems=Immer Gegenst\u00e4nde fertigen
-AppEng.GuiITooltip.EmitLevelAbove=Signal wenn Limit \u00FCberschritten.
-AppEng.GuiITooltip.EmitLevelsBelow=Signal wenn Limit unterschritten.
+AppEng.GuiITooltip.EmitLevelAbove=Signal, wenn Limit erreicht oder \u00FCberschritten.
+AppEng.GuiITooltip.EmitLevelsBelow=Signal, wenn Limit erreicht oder unterschritten.
 AppEng.GuiITooltip.ItemName=Gegenstandsname
 AppEng.GuiITooltip.MoveOrCraft=Einzelne Gegenst\u00e4nde bewegen / fertigen
 AppEng.GuiITooltip.MoveSingle=Einzelne Gegenst\u00e4nde bewegen
