Added rv14 stuff. added PillAr (with A)

--- a/de_DE.properties
+++ b/de_DE.properties
@@ -237,7 +237,7 @@ AppEng.Blocks.WirelessAccessPoint.name=Drahloser ME-Zugangspunkt
 AppEng.Blocks.GrindStone.name=M\u00FChlstein
 AppEng.Blocks.TransitionPlane.name=ME-\u00DCbergangsmembran
 AppEng.Blocks.Quartz.name=Certus-Quarzblock
-AppEng.Blocks.QuartzChiseled.name=Gemei\u00dfelter Certus-Quarzbloxk
+AppEng.Blocks.QuartzChiseled.name=Gemei\u00dfelter Certus-Quarzblock
 AppEng.Blocks.QuartzPillar.name=Certus-Quarzs\u00e4ule
 AppEng.Blocks.EnergyCell.name=Energiezelle
 AppEng.Blocks.Condenser.name=ME-Kondensator
