--- a/de_DE.properties
+++ b/de_DE.properties
@@ -42,6 +42,7 @@ AppEng.Gui.Online=Online
 AppEng.Gui.Offline=Offline
 AppEng.Gui.LowPower=Keine Energie!
 AppEng.Gui.EnergyUsed=Energieverbrauch
+AppEng.Gui.EnergyStored=Energie gespeichert
 AppEng.Gui.Rate=Einheiten / t
 AppEng.Gui.Conflict=Kernkonflikt
 AppEng.Gui.Blacklisted=Gesperrt
@@ -50,11 +51,18 @@ AppEng.Gui.Whitelisted=Erlaubt
 AppEng.Gui.WhitelistedDesc=Akzeptiert nur gelistete Gegenst\u00e4nde.
 AppEng.GuiButtons.Next=Vor
 AppEng.GuiButtons.Prev=Zur\u00FCck
+AppEng.GuiITooltip.P2PMJTunnel=MJ-Tunnel
+AppEng.GuiITooltip.P2PEUTunnel=EU-Tunnel
+AppEng.GuiITooltip.P2PFluidTunnel=Fl\u00fcssigkeits-Tunnel
+AppEng.GuiITooltip.P2PItemTunnel=Item-Tunnel
+AppEng.GuiITooltip.P2PFRedstoneTunnel=Redstone-Tunnel
+AppEng.GuiITooltip.P2PMETunnel=ME-Tunnel
 AppEng.GuiITooltip.PowerUnits=Energieeinheiten
 AppEng.GuiITooltip.AEUnits=Applied Energistics
 AppEng.GuiITooltip.EUUnits=Industrial Craft2
 AppEng.GuiITooltip.MJUnits=Buildcraft
 AppEng.GuiITooltip.UEUnits=Universial Electricity
+AppEng.GuiITooltip.WUnits=RotaryCraft Watt
 AppEng.GuiITooltip.SearchMode=Suchfeld-Modus
 AppEng.GuiITooltip.SearchMode_Auto=Automatische Suche
 AppEng.GuiITooltip.SearchMode_Standard=Standard-Suche
